Add remote run script